--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.11
 markdown-it-py==4.0.0
 mdurl==0.1.2
 motor==3.7.1
+passlib==1.7.4
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
